dev: fix z-index details button for title page

--- a/src/components/Page/Titlepages/Titlepages.css
+++ b/src/components/Page/Titlepages/Titlepages.css
@@ -123,6 +123,7 @@
 
 .drop-down {
   /* position: relative; */
+  z-index: 888;
 }
 
 .drop-down__active-button::-webkit-details-marker {
